Fix link style on mobile resolutions.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -157,3 +157,14 @@ html {
   transform: scale3d(1, -8, 1);
   transition: transform 0.15s;
 }
+
+@media (max-width: 400px) {
+  .style:hover::before {
+    transform: scale3d(1, -4, 1);
+  }
+}
+@media (max-width: 500px) {
+  .style:hover::before {
+    transform: scale3d(1, -5, 1);
+  }
+}
