--- a/resources/sass/link.scss
+++ b/resources/sass/link.scss
@@ -54,3 +54,15 @@
     transform: scale3d(1, -8, 1);
     transition: transform 0.15s;
 }
+
+@media (max-width: 400px){
+    .style:hover::before {
+        transform: scale3d(1, -4, 1);
+    }
+}
+
+@media (max-width: 500px){
+    .style:hover::before {
+        transform: scale3d(1, -5, 1);
+    }
+}
